Fixed scrollbar width glitch

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 .scroller-wrapper {
     position: relative;
-    overflow-y: auto;
+    overflow-y: scroll;
     top: 100px;
     left: 0;
     right: 0;
